Friday, March 08 2002 Heikki Sairanen <heikki.sairanen@phpoint.net> 
	(however all changes actually coded by Mark Schreiber)

	* FeDX/Source/graphics.cpp: ToggleFullScreen for USE_SDL added, 
	* FeWin/Source/whandler.cpp: Function globalwindowhandler::ProcessMessage() funcion for SDL changed to call ToggeFullScreen when alt + enter pressed

March 07 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* itemde.cpp: Two unused parameter warnings corrected
	* lterrade.cpp: Two unused parameter warnings corrected
	* entity.cpp: Two unused parameter warnings corrected
	* ivandj.mak: Added reference to new files
	* ivanmgw.mak: Added reference to new files

March 07 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Unit class added
	  * This class holds materials. It is derived from entity and is base for object and fluid.
	  * Modified files:
	    * object.cpp
	    * object.h
	    * fluid.cpp
	    * fluid.h
	    * entity.cpp
	      * see unit.cpp
	    * entity.h
	      * see unit.h
	  * Added files:
	    * unit.cpp
	      * unit::unit(bool AddToPool, bool HasBe) added
	      * unit::~unit() added
	      * void unit::Save(outputfile& SaveFile) const added
	      * void unit::Load(inputfile& SaveFile) added
	      * ushort unit::GetEmitation() const moved here from entity.cpp
	      * void unit::PreserveMaterial(ushort Index) moved here from entity.cpp
	      * material* unit::GetMaterial(ushort Index) const moved here from entity.cpp
	      * ushort unit::GetMaterials() const moved here from entity.cpp
	    * unit.h
	      * material* unit::GetMaterial(ushort) const moved here from entity.h
	      * ushort unit::GetEmitation() const moved here from entity.h
	      * ushort unit::GetMaterials() const moved here from entity.h
	      * bitmap* unit::GetPicture() const moved here from entity.h
	      * void unit::PreserveMaterial(ushort) moved here from entity.h
	* Bodyparts added
	  * These are stored as an array of items in character, although they can't be severed yet :(